@@ -1,4 +1,8 @@
-﻿shmuel 29.01.2014 18:45:16 +0200 - build 3788
+﻿drkns 29.01.2014 23:43:43 +0200 - build 3789
+
+1. Во имя перфекционизма не запрашиваем информацию о кодовых страницах до тех пор, пока она не понадобится.
+
+shmuel 29.01.2014 18:45:16 +0200 - build 3788
 
 1. Рефакторинг в системе макросов.
 
